itsnow <xue.com.fei@qq.com>

--- a/upgradelibrary/src/main/res/values/strings.xml
+++ b/upgradelibrary/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="dialog_upgrade_versions">版本号 [v%1$s]</string>
     <string name="dialog_upgrade_btn_negative">以后再说</string>
     <string name="dialog_upgrade_btn_positive">立即体验</string>
-    <string name="dialog_upgrade_btn__neutral">忽略</string>
+    <string name="dialog_upgrade_btn_neutral">忽略更新</string>
     <string name="download_start" tools:ignore="TypographyEllipsis">下载连接中...</string>
     <string name="download_pause">下载暂停</string>
     <string name="download_cancel">下载取消</string>
