--- a/upgradelibrary/src/main/res/values/strings.xml
+++ b/upgradelibrary/src/main/res/values/strings.xml
@@ -18,10 +18,10 @@
     <string name="dialog_upgrade_btn_reset">重试</string>
     <string name="dialog_upgrade_btn_launch">启动</string>
 
-    <string name="message_connect_success">连接同步服务成功</string>
-    <string name="message_connect_failure">连接同步服务失败，已连接客户端实例！</string>
-    <string name="message_disconnect_success">断开连接同步服务成功</string>
-    <string name="message_disconnect_failure">断开连接同步服务失败</string>
+    <string name="message_connect_success">连接成功</string>
+    <string name="message_connect_failure">连接失败，服务已存在客户端实例！</string>
+    <string name="message_disconnect_success">断开连接成功</string>
+    <string name="message_disconnect_failure">断开连接失败</string>
 
     <string name="message_check_for_update">获取更新中&#8230;</string>
     <string name="message_check_for_update_failure">获取更新失败，请稍候重试！</string>
